--- a/module_3/M3_NB2_NoiseVsBias.ipynb
+++ b/module_3/M3_NB2_NoiseVsBias.ipynb
@@ -37,7 +37,7 @@
     " \n",
     "####  List of exercises\n",
     ">   - **Exercise 1**: Reducing the effect of bias in data.\n",
-    "  - **Exercise 2**: Understanding the effect of increasing sample size on the shape of noisy and biased data."
+    "  - **Exercise 2**: Understanding the effect of increasing sample size on estimated shape parameters of noisy and biased data."
    ]
   },
   {
@@ -140,9 +140,9 @@
     "    for v_x in range(max(x-point_size,0),min(x+point_size,im.size[0])):\n",
     "        for v_y in range(max(y-point_size,0),min(y+point_size,im.size[1])):\n",
     "            if is_inside: \n",
-    "                pix[v_x,v_y] = (255, 0, 0)\n",
+    "                pix[v_x,v_y] = (0,0,255) # color='blue'\n",
     "            else:\n",
-    "                pix[v_x,v_y] = (0, 0, 255)\n",
+    "                pix[v_x,v_y] = (255, 0, 0) # color = 'red'\n",
     "                \n",
     "# Generate random points to be added to our image using the randint from the random library.\n",
     "# https://docs.python.org/2/library/random.html\n",
@@ -191,17 +191,17 @@
     "        points_copy = copy.deepcopy(points)\n",
     "        points_copy = introduce_random_error(points_copy, error=error)\n",
     "        xx.append(calculate_time_inside(points_copy))\n",
-    "    plot_results(xx, 'Histogram with random errors.')\n",
+    "    plot_results(xx, 'Histogram for noisy data.')\n",
     "    return points_copy\n",
     "\n",
     "# Calculate bias using our previously created function.\n",
-    "def calculate_bias(points, error=0.4, bias=0.7, k=100):\n",
+    "def calculate_bias(points, error=0.4, bias=0.6, k=100):\n",
     "    xx = []\n",
     "    for i in range(k):\n",
     "        points_copy = copy.deepcopy(points)\n",
     "        points_copy = introduce_bias(points_copy, error=error, bias=bias)\n",
     "        xx.append(calculate_time_inside(points_copy))\n",
-    "    plot_results(xx, 'Histogram with bias.')\n",
+    "    plot_results(xx, 'Histogram for biased data.')\n",
     "    return points_copy\n",
     "\n",
     "# Produce plots using our previously created function. \n",
@@ -308,11 +308,12 @@
     "pix_bias = im_bias.load()\n",
     "\n",
     "## Generate random points.\n",
-    "# The function that we created previously accepts the image, its properties, number of points and a threshold for points inside as parameters.\n",
-    "points = generate_random_points(pix_org, im_org, n=500, threshold=0.6)\n",
+    "# The function, defined previously, accepts the image, its properties, number of points and a threshold for points inside as parameters.\n",
+    "points = generate_random_points(pix_org, im_org, n=500, threshold=0.7)\n",
     "\n",
     "## Calculate and print the time spent inside.\n",
-    "print 'Proportion of time spent inside (based on number of observations): {}.'.format(calculate_time_inside(points))"
+    "ts = calculate_time_inside(points) \n",
+    "print('Proportion of time spent inside (based on number of observations): {}.'.format(ts))"
    ]
   },
   {
@@ -352,8 +353,11 @@
    },
    "outputs": [],
    "source": [
-    "# Demonstrate random error.\n",
-    "random_error_points = calculate_random_error(points, k=1000)\n",
+    "# Introduce random error to the data assigned to the \"points\" variable \n",
+    "# and calculate \"time spent inside\" for the corrupted data. \n",
+    "# Repeat a 1000 times and plot the histogram of the \"time spent inside\" values.\n",
+    "# Also, plot a map from a single iteration of the error generation algorithm. \n",
+    "random_error_points = calculate_random_error(points, k=1000, error=0.4)\n",
     "plot_map(random_error_points, im_random_error, pix_random_error, 'Plot of generated random points with random errors on image.')"
    ]
   },
@@ -362,7 +366,7 @@
    "metadata": {},
    "source": [
     "#### 1.3.4 Bias or systematic errors\n",
-    "When there are systematic errors (bias) present in your data set, you will need to employ alternative methods to clean your data. Take note of the shift in the histogram where it is no longer centered around the mean. As per the previous example, the mean and standard deviation are produced, as well as the updated map."
+    "When there are systematic errors (bias) present in your data set, you will need to employ alternative methods to clean your data. Take note of the shift in the histogram where it is no longer centered around the expected mean. As per the previous example, the mean and standard deviation are produced, as well as the updated map."
    ]
   },
   {
@@ -373,8 +377,12 @@
    },
    "outputs": [],
    "source": [
-    "# Demonstrate bias.\n",
-    "bias_points = calculate_bias(points, k=1000, bias=0.6)\n",
+    "# Introduce bias error to the data assigned to the \"points\" variable \n",
+    "# and calculate \"time spent inside\" for the corrupted data. \n",
+    "# Repeat a 1000 times and plot the histogram of the \"time spent inside\" values.\n",
+    "# Also, plot a map from a single iteration of the error generation algorithm. \n",
+    "\n",
+    "bias_points = calculate_bias(points, k=1000, bias=0.6, error=0.4)\n",
     "plot_map(bias_points, im_bias, pix_bias, 'Plot of generated random points with bias on image.')"
    ]
   },
@@ -430,7 +438,7 @@
     "</div>\n",
     "\n",
     "### Instructions\n",
-    "> Plot what happens with the estimated values of the mean and  standard deviation when you increase the number of datapoints in:\n",
+    "> Using the data generation and plotting functions introduced above, describe the effect on the estimated values of the mean and  standard deviation when you increase the number of datapoints in:\n",
     "\n",
     "> 1. Noisy data; and \n",
     "\n",
@@ -574,20 +582,18 @@
     "        if pixdata[x, y] == (244, 243, 236, 255):    # check for current building color\n",
     "            pixdata[x, y] = (50, 50, 255, 255)       # replace with new color\n",
     "\n",
-    "# The lines below have been commented out as the image is included in course material. \n",
-    "# Advanced students can uncomment the relevant portions to save and display their images with alternative colors.\n",
-    "\n",
-    "\n",
-    "# im.save('updated_file.png') # Save the updated image.\n",
-    "\n",
-    "# im.show() # Show the updated image."
+    "im.save('my_updated_file.png') # Save the updated image."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Look at the updated image:\n",
+    "> **Note**:\n",
+    "\n",
+    "> You can replace the filename in this markdown cell with \"my_updated_file.png\" as per the previous cell if you want to display any changes you made to the image.\n",
+    "\n",
+    "Look at the updated image :\n",
     "\n",
     "![Updated image](updated_file.png \"Image with the building color changed to blue.\")"
    ]
@@ -617,9 +623,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
