--- a/module_3/M3_NB3_GeotaggingWiFiAP.ipynb
+++ b/module_3/M3_NB3_GeotaggingWiFiAP.ipynb
@@ -192,7 +192,7 @@
    },
    "outputs": [],
    "source": [
-    "# Remove columns from location dataset.\n",
+    "# Remove irrelevant columns from location dataset.\n",
     "u00_loc.drop(['provider', 'network_type', 'bearing', 'speed', 'travelstate'], axis=1, inplace=True)\n",
     "u00_loc.head(3)"
    ]
@@ -216,7 +216,7 @@
    "outputs": [],
    "source": [
     "# Plot histogram of accuracy observations.\n",
-    "u00_loc.accuracy.hist(cumulative=True, normed=1, bins=100)"
+    "u00_loc.accuracy.hist(cumulative=True, normed=1, histtype='step', bins=100)"
    ]
   },
   {
@@ -528,7 +528,7 @@
     "        others.append(BSSID)\n",
     "\n",
     "# Print summary results.\n",
-    "print (\"We identified {} static routers and {} non-static (moved or mobile).\".format(len(static), len(others))) "
+    "print(\"We identified {} static routers and {} non-static (moved or mobile).\".format(len(static), len(others))) "
    ]
   },
   {
@@ -740,16 +740,16 @@
    },
    "outputs": [],
    "source": [
-    "print (\"{} all geotags found\".format(len(all_geotags)))\n",
+    "print(\"{} all geotags found\".format(len(all_geotags)))\n",
     "\n",
     "all_groups = all_geotags.groupby('BSSID')\n",
-    "print (\"{} unique routers found\".format(len(all_groups)))\n",
+    "print(\"{} unique routers found\".format(len(all_groups)))\n",
     "\n",
     "# Drop sparsely populated access points.\n",
     "all_geotags = all_groups.filter(lambda gr: len(gr)>=5)\n",
     "all_groups = all_geotags.groupby('BSSID')\n",
     "\n",
-    "print (\"{} unique router APs remaining after dropping routers with sparse data\".format(len(all_groups)))    "
+    "print(\"{} unique router APs remaining after dropping routers with sparse data\".format(len(all_groups)))    "
    ]
   },
   {
@@ -857,7 +857,7 @@
     "        all_others.append(BSSID)\n",
     "\n",
     "# Print summary results.\n",
-    "print (\"We identified {} static routers and {} non-static (moved or mobile).\".format(len(all_static), len(all_others))) "
+    "print(\"We identified {} static routers and {} non-static (moved or mobile).\".format(len(all_static), len(all_others))) "
    ]
   },
   {
@@ -1043,9 +1043,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
