--- a/module_4/M4_NB2_PeerNetworkAnalysis.ipynb
+++ b/module_4/M4_NB2_PeerNetworkAnalysis.ipynb
@@ -115,11 +115,10 @@
    "outputs": [],
    "source": [
     "# Load the relevant libraries to your notebook. \n",
-    "import csv                     # Process csv files.\n",
     "import pandas as pd            # Processing csv files and manipulating the DataFrame.\n",
     "import networkx as nx          # Graph-like object representation and manipulation module.\n",
     "import matplotlib.pylab as plt # Plotting and data visualization module. \n",
-    "                               # We use this for basic graph visualization.\n",
+    "                               # This is used for basic graph visualization.\n",
     "import numpy as np       \n",
     "\n",
     "from networkx.drawing.nx_agraph import graphviz_layout\n",
@@ -490,7 +489,7 @@
    },
    "outputs": [],
    "source": [
-    "# Print the first 5 edges with corresponding attribute data.\n",
+    "# Print a sample of the edges, with corresponding attribute data.\n",
     "max_number_of_edges = 5\n",
     "count = 0\n",
     "for n1,n2,attr in G.edges(data=True): # unpacking\n",
@@ -518,9 +517,9 @@
     "# Verify our attribute data is correct using a selected (u,v) pair from the data.\n",
     "u = 'fa10-01-77'\n",
     "v = 'fa10-01-78'\n",
-    "print 'Number of undirected call interactions between {0} and {1} is {2}.'.format(u,\n",
-    "                                                                                 v,\n",
-    "                                                                                 G.get_edge_data(v,u)['counts'])"
+    "print('Number of undirected call interactions between {0} and {1} is {2}.'.format(u,\n",
+    "                                                                    v,\n",
+    "                                                            G.get_edge_data(v,u)['counts']))"
    ]
   },
   {
@@ -534,9 +533,9 @@
     "# Compare our data set to the interactions data set.\n",
     "is_uv_pair = ((interactions['participantID.A'] == u) & (interactions['participantID.B'] == v)) \n",
     "is_vu_pair = ((interactions['participantID.A'] == v) & (interactions['participantID.B'] == u))\n",
-    "print 'Number of undirected call interactions between {0} and {1} is {2}'.format(u,\n",
-    "                                                                      v, \n",
-    "                                                                      interactions[is_uv_pair | is_vu_pair].shape[0])"
+    "print('Number of undirected call interactions between {0} and {1} is {2}'.format(u,\n",
+    "                                            v, \n",
+    "                                            interactions[is_uv_pair | is_vu_pair].shape[0]))"
    ]
   },
   {
@@ -621,7 +620,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.3.2 Graph visualization using NetworlX's in-built \"Spring layout\""
+    "#### 1.3.2 Graph visualization using NetworlX's in-built \"spring layout\""
    ]
   },
   {
@@ -1293,7 +1292,7 @@
     "\n",
     "# Scatter plot comparison of the recomputed measures.\n",
     "centrality_scatter(betweenness2, centrality2, \n",
-    "                   xlab='betweenness centrality',ylab='closeness centrality',line=True)"
+    "                   xlab='betweenness centrality',ylab='degree centrality',line=True)"
    ]
   },
   {
@@ -1495,11 +1494,11 @@
    },
    "outputs": [],
    "source": [
-    "# Number of edges there are between neigbors of 5. \n",
-    "actual_edges = len([(4,5), (6,7)])\n",
+    "# Number of actual edges there are between neigbhors of 5. \n",
+    "actual_edges = len([(4,6), (6,7)])\n",
     "\n",
     "# Total possible edges between neighbors of 5.\n",
-    "total_possible_edges = len([(4,5), (6,7), (4,7)])\n",
+    "total_possible_edges = len([(4,6), (6,7), (4,7)])\n",
     "\n",
     "# Clustering coeff of node. \n",
     "local_clustering_coef  = 1.0 * actual_edges / total_possible_edges\n",
@@ -1871,7 +1870,6 @@
    "outputs": [],
    "source": [
     "# Create the adjacency matrix for call records using NetworkX and Pandas functions.\n",
-    "G = G.to_undirected()\n",
     "nodes = list(G.nodes())\n",
     "call_adjmatrix = nx.to_pandas_dataframe(G,nodelist=nodes)\n",
     "call_adjmatrix.to_csv('./call.adjmatrix')"
@@ -1924,9 +1922,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
