--- a/module_4/M4_NB3_NetworkClustering.ipynb
+++ b/module_4/M4_NB3_NetworkClustering.ipynb
@@ -183,8 +183,9 @@
     "        for v,d in p.items():\n",
     "            distances[G.nodes().index(u)][G.nodes().index(v)] = d\n",
     "            distances[G.nodes().index(v)][G.nodes().index(u)] = d\n",
-    "            if u==v: distances[G.nodes().index(u)][G.nodes().index(u)]=0\n",
-    "    # Create hierarchical cluster.\n",
+    "            if u==v: \n",
+    "                distances[G.nodes().index(u)][G.nodes().index(u)]=0\n",
+    "    # Create hierarchical cluster (HC).\n",
     "    Y=distance.squareform(distances)\n",
     "    if linkage == 'max':\n",
     "        # Creates HC using farthest point linkage.\n",
@@ -193,7 +194,7 @@
     "        # Creates HC using closest point linkage.\n",
     "        Z=hierarchy.single(Y)  \n",
     "    if linkage == 'average':\n",
-    "        # Creates HC using closest point linkage.\n",
+    "        # Creates HC using average point linkage.\n",
     "        Z=hierarchy.average(Y)\n",
     "        \n",
     "    return Z\n",
@@ -229,7 +230,7 @@
    },
    "outputs": [],
    "source": [
-    "# Perform hierarchical clustering using 'max' linkage. \n",
+    "# Perform hierarchical clustering using 'average' linkage. \n",
     "Z = create_hc(call_graph, linkage='average') "
    ]
   },
@@ -237,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The dendrogram corresponding to the partitioned graph (illustrated above) is obtained as follows:"
+    "The dendrogram corresponding to the partitioned graph is obtained as follows:"
    ]
   },
   {
@@ -351,6 +352,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The partitioned graph, corresponding to the dendrogram above, can now be visualized."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -428,7 +436,10 @@
     "> 4. Perform an inner join by merging \"df1\" and \"df2\" on the field \"participantID\". Assign the result of this join to variable \"df3\".\n",
     "> 5. Perform a groupby on \"df3\" (using \"cluster_label\" field), and then evaluate the mean of the four centrality measures (using the \"`agg()`\" method). Assign the aggregation result to \"df4\".\n",
     "> 6. Review \"df4\", and plot its barplot. \n",
-    "> 7. Combine each set of clusters with the same mean values across all centrality measures into a single cluster. Assign the smallest value of the labels in the set to the merged cluster.\n",
+    "> 7. Merge clusters which share the same mean values for a centrality measure into a single cluster. Assign the smallest value of the labels in the set to the merged cluster.\n",
+    ">> **Note**:<br>\n",
+    "Combine clusters such that, given a  cluster with centrality measures $[x1, x2, x3, x4]$, and another cluster with centrality measures $[z1, z2, z3, z4]$, the following holds true:<br>\n",
+    "$x1 = z1$ <br> $x2 = z2$ <br> $x3 = z3$ <br> $x4 = z4$<br>\n",
     "> 8. Print the size of each cluster, in descending order,  after performing the cluster merging in the preceding step."
    ]
   },
@@ -537,12 +548,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# You can uncomment the line below to view the louvain_partition variable.\n",
-    "# louvain_partition"
+    "# View the contents of the louvain_partition variable.\n",
+    "print(louvain_partition)"
    ]
   },
   {
@@ -610,7 +621,7 @@
    },
    "outputs": [],
    "source": [
-    "spectral_partition"
+    "print(spectral_partition)"
    ]
   },
   {
@@ -680,9 +691,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
