--- a/module_4/M4_NB4_GraphSignalProcessing.ipynb
+++ b/module_4/M4_NB4_GraphSignalProcessing.ipynb
@@ -63,32 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "%matplotlib inline\n",
-       "import matplotlib\n",
-       "#import pygsp #Uncomment if you have pygsp installed.\n",
-       "import numpy as np\n",
-       "import matplotlib.pylab as plt\n",
-       "import networkx as nx\n",
-       "import pandas as pd\n",
-       "\n",
-       "plt.rcParams['figure.figsize'] = (6, 6)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
     "%matplotlib inline\n",
@@ -114,50 +93,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "## Create a graph.\n",
-       "N = 100 # number of nodes.\n",
-       "G = pygsp.graphs.Sensor(N)\n",
-       "## Compute the Fourier basis.\n",
-       "G.compute_fourier_basis()\n",
-       "\n",
-       "## Create a smooth signal with noise.\n",
-       "## The second Eigenvector of the Laplacian matrix, often called the Fiedler vector, \n",
-       "# can be considered as a smooth graph signal.\n",
-       "x = G.U[:, 1]\n",
-       "\n",
-       "y = x + np.random.normal(scale=1/np.sqrt(N), size=N)\n",
-       "\n",
-       "## Select a filter.\n",
-       "filter = pygsp.filters.Expwin(G, 0.1)\n",
-       "\n",
-       "## Filter the noise.\n",
-       "s = filter.analysis(y)\n",
-       "\n",
-       "## Display the original signal.\n",
-       "G.plot_signal(x, default_qtg=False, plot_name='original_signal',savefig=True)\n",
-       "\n",
-       "## Display the noisy signal.\n",
-       "G.plot_signal(y, default_qtg=False, plot_name='noisy_signal',savefig=True)\n",
-       "\n",
-       "## Display the filtered signal.\n",
-       "G.plot_signal(s, default_qtg=False, plot_name='filtered_signal',savefig=True)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
     "## Create a graph.\n",
@@ -220,9 +160,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
