--- a/module_4/M4_NB1_NetworkX_Introduction.ipynb
+++ b/module_4/M4_NB1_NetworkX_Introduction.ipynb
@@ -53,6 +53,8 @@
     "\n",
     "[NetworkX](https://networkx.github.io/)  is a Python language software package used to create, manipulate, and study the structure, dynamics, and function of complex networks. The first version of this software package was designed and written by Aric Hagberg, Dan Schult, and Pieter Swart between 2002 and 2003.\n",
     "\n",
+    "A network or graph is a set of vertices or nodes, with relationships between nodes represented by a set of lines. These lines can include arrows to depict a directional relationship.\n",
+    "\n",
     "With NetworkX you can load and store networks in standard and nonstandard data formats, generate numerous types of random and classic networks, analyze network structure, build network models, design new network algorithms, draw networks, and much more.\n",
     "\n",
     "To access and use the NetworkX module functionality, it first needs to be imported into your notebook. \n",
@@ -134,7 +136,7 @@
    },
    "outputs": [],
    "source": [
-    "# An empty network undirected graph object.\n",
+    "# Instantiate an empty network undirected graph object, and assign to variable G.\n",
     "G=nx.Graph()"
    ]
   },
@@ -153,10 +155,19 @@
    },
    "outputs": [],
    "source": [
-    "# Add a node.\n",
-    "G.add_node(1)\n",
-    "\n",
-    "# Add another node.\n",
+    "# Add a node to G.\n",
+    "G.add_node(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Add another node to G.\n",
     "G.add_node('x')"
    ]
   },
@@ -220,19 +231,36 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Add an edge between two nodes, 1 and 3. \n",
     "# Note that nodes are automatically added if they do not exist.\n",
-    "G.add_edge(1,3)\n",
-    "\n",
+    "G.add_edge(1,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# Add edge information, and specify the value of the weight attribute.\n",
     "G.add_edge(2,'x',weight=0.9)\n",
-    "G.add_edge(1,'x',weight=3.142)\n",
-    "\n",
-    "\n",
+    "G.add_edge(1,'x',weight=3.142)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# Add edges from a list of tuples.\n",
     "# In each tuple, the first 2 elements are nodes, and third element is value of the weight attribute. \n",
     "edgelist=[('a','b',5.0),('b','c',3.0),('a','c',1.0),('c','d',7.3)] \n",
@@ -301,10 +329,19 @@
    },
    "outputs": [],
    "source": [
-    "# Add a sine function as node, which is imported from the math module.\n",
+    "# Add a sine function, imported from the math module, as a node.\n",
     "from math import sin\n",
-    "G.add_node(sin) \n",
-    "\n",
+    "G.add_node(sin) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# Add file handle object as node.\n",
     "fh = open(\"../data/CallLog.csv\",\"r\") # handle to file object.\n",
     "G.add_node(fh)"
@@ -475,7 +512,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also print the list of all nodes and their corresponding neighbors."
+    "You can also print the list of all nodes and their corresponding neighbors. The code below prints the node, and the node's neigbhors as list (that is, enclosed between two square brackets)."
    ]
   },
   {
@@ -543,7 +580,7 @@
    },
    "outputs": [],
    "source": [
-    "# Multiple edge or node removal is also possible, e.g.\n",
+    "# Multiple edge or node removal is also possible.\n",
     "G.remove_edges_from(e)"
    ]
   },
@@ -586,7 +623,7 @@
    "metadata": {},
    "source": [
     "## 1.3 Graph generators\n",
-    "NetworkX also has standard algorithms to create network topologies. The following cell includes some examples that you are encouraged to build, analyze, and visualize, using the tools described above, as well as other tools that will be introduced later."
+    "NetworkX also has standard algorithms to create network topologies. The following cells include some examples that you are encouraged to build, analyze, and visualize, using the tools described above, as well as other tools that will be introduced later."
    ]
   },
   {
@@ -707,7 +744,7 @@
     "### Exercise 1.1: Instructions\n",
     "\n",
     "> Create an [**Erdos Renyi**](http://networkx.github.io/documentation/networkx-1.7/reference/generated/networkx.generators.random_graphs.erdos_renyi_graph.html#networkx.generators.random_graphs.erdos_renyi_graph) random graph.\n",
-    "Your graph should have 20 nodes, where each of the edges are chosen with a probability of 0.175, using NetworkX's graph generator methods. Set the argument for the seed parameter to \"``random.seed(40)``\". Assign your graph to a variable \"G\".\n",
+    "Your graph should have 30 nodes, where each of the edges are chosen with a probability of 0.15, using NetworkX's graph generator methods. Set the argument for the seed parameter to \"``random.seed(10)``\". Assign your graph to a variable \"G\".\n",
     ">> **Hint**: \n",
     "An Erdos Renyi random graph is generated with NetworkX using the following: \n",
     "\n",
@@ -840,9 +877,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
