--- a/module_7/M7_NB2_Application_Social_Analytics.ipynb
+++ b/module_7/M7_NB2_Application_Social_Analytics.ipynb
@@ -128,7 +128,14 @@
     "  >>\n",
     "  >> Keep Professor Pentland’s comments on correlation and prediction from earlier modules in mind.\n",
     "\n",
-    "> d) How can the GFT model be improved?"
+    "> d) How can the GFT model be improved?\n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "**Additional resources on GFT program**\n",
+    "> 1. \"Detecting influenza epidemics using search engine query data\", Jeremy Ginsberg, Matthew H. Mohebbi1, Rajan S. Patel, Lynnette Brammer, Mark S. Smolinski and Larry Brilliant (2009), *Nature*,  vol. 457, 1012-1014.  Preprint available [here](https://static.googleusercontent.com/media/research.google.com/en//archive/papers/detecting-influenza-epidemics.pdf).\n",
+    "> 1. [In Defense of Google Flu Trends](http://www.theatlantic.com/technology/archive/2014/03/in-defense-of-google-flu-trends/359688/), Alexis C. Madrigal, *The Atlantic*, March 2014.\n",
+    "> 1. [Google Flu Trends’ Failure Shows Good Data > Big Data](https://hbr.org/2014/03/google-flu-trends-failure-shows-good-data-big-data), Kaiser Fung, HBR, March 2014.\n"
    ]
   },
   {
@@ -168,7 +175,7 @@
     "Big data studies that have appropriate interventions can play a significant role in ensuring a more effective, productive, and happy workforce. These studies are often highly sensitive to privacy considerations due to the short time frame between observation and potential impact.\n",
     "\n",
     "## 2.1 Privacy\n",
-    "In the video content, Stopczynski also asks whether or not you care (or should care) if a random company knows where you are at any given point in time (for example, a free application on your cellphone requiring location data), and whether your feelings would change if said company was the company that you work for. Many applications where you share your data can also be used to gain insights into aspects of your life that you may not be comfortable sharing with your employer. This is because some of these insights can be taken out of context, resulting in privacy violations and subsequent loss of trust. Consider [Pokemon Go](https://www.reffind.com/pokemon-go-says-employees/) as an application that can potentially be used to gain insights about you.\n",
+    "In the video content, Arek Stopczynski also asks whether or not you care (or should care) if a random company knows where you are at any given point in time (for example, a free application on your cellphone requiring location data), and whether your feelings would change if said company was the company that you work for. Many applications where you share your data can also be used to gain insights into aspects of your life that you may not be comfortable sharing with your employer. This is because some of these insights can be taken out of context, resulting in privacy violations and subsequent loss of trust. Consider [Pokemon Go](https://www.reffind.com/pokemon-go-says-employees/) as an application that can potentially be used to gain insights about you. The Council for Big Data, Ethics, and Society also published a comprehensive white paper outlining a need for ethical conduct in data science and related endeavors (Metcalf, et al., 2016).\n",
     "\n",
     "## 2.2 Trust\n",
     "A recent talk by one of Gartner’s analysts, Frank Buytendijk, stated that trust is an emotion. He said, “It is the confidence people have in your future behavior” (Gartner 2015). He then went on to say that “algorithms allow companies to trust people to the exact level they deserve: dynamically and at scale. Trust goes two ways. People must trust your business too, to connect to you. It is the confidence people have in your future behavior” (Gartner 2015).\n",
@@ -277,7 +284,9 @@
     "# 5. References\n",
     "Brockmann, Dirk, and Dirk Helbing. 2013. “The Hidden Geometry of Complex, Network-Driven Contagion Phenomena.” Science 342:1337-1342. doi:10.1126/science.1245200.\n",
     "\n",
-    "Gartner. 2015. “Gartner Says the Economics of Connections in Digital Business are Accelerating by the Use of Algorithms.” Last modified October 5. http://www.gartner.com/newsroom/id/3142918. "
+    "Gartner. 2015. “Gartner Says the Economics of Connections in Digital Business are Accelerating by the Use of Algorithms.” Last modified October 5. http://www.gartner.com/newsroom/id/3142918. \n",
+    "\n",
+    "Metcalf, Jacob, Emily F. Keller, and Danah Boyd. 2017. “Perspectives on Big Data, Ethics, and Society.” Council for Big Data, Ethics, and Society. Last Accessed January 24, 2017. http://bdes.datasociety.net/council-output/perspectives-on-big-data-ethics-and-society/."
    ]
   },
   {
@@ -291,22 +300,23 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
