--- a/module_7/M7_NB2_Application_Social_Analytics.ipynb
+++ b/module_7/M7_NB2_Application_Social_Analytics.ipynb
@@ -57,11 +57,11 @@
     "**Human mobility** offers insights into the spreading of disease as well as the ability to identify potential points of origin of diseases. You can read more about two such studies (one already introduced in the video content) below:\n",
     "\n",
     "1. The study of the spread of malaria in Kenya:\n",
-    "    - [Using cell phone data to curb the spread of malaria](https://www.hsph.harvard.edu/news/press-releases/cell-phone-data-malaria/)\n",
-    "    - [Quantifying travel behavior for infectious disease research: a comparison of data from surveys and mobile phones](http://www.nature.com/articles/srep05678)\n",
-    "\n",
+    " - [Using cell phone data to curb the spread of malaria](https://www.hsph.harvard.edu/news/press-releases/cell-phone-data-malaria/)\n",
+    " - [Quantifying travel behavior for infectious disease research: a comparison of data from surveys and mobile phones](http://www.nature.com/articles/srep05678)\n",
+    "<br><br>\n",
     "2. The study of the spread of Ebola in Senegal:\n",
-    "    - [Cell-Phone Data Might Help Predict Ebola’s Spread](https://www.technologyreview.com/s/530296/cell-phone-data-might-help-predict-ebolas-spread/)\n",
+    " - [Cell-Phone Data Might Help Predict Ebola’s Spread](https://www.technologyreview.com/s/530296/cell-phone-data-might-help-predict-ebolas-spread/)\n",
     "\n",
     "Known data sets can also be used to modify the concept of distance by looking at the number (weight) of people traveling between cities to create an effective distance between locations. This defined value can be used in epidemiological studies to not only predict the spread of contagions, but also to attempt to identify points of origin, based on the same effective distance from all of the locations where the contagion is observed (Brockmann and Helbing 2013).\n",
     "\n",
@@ -211,7 +211,7 @@
     "> You can read more about the use of [financial big data analysis for the estimation of systemic risks](http://economia.unipv.it/docs/dipeco/quad/ps/RePEc/pav/demwpp/DEMWP0086.pdf) in the University of Pavia’s DEM Working Paper Series. \n",
     "\n",
     "\n",
-    "A number of initiatives and companies have found ways of using available data sources to build alternative models for assessing credit worthiness that are not based on credit bureau data. These [initiatives](https://www.whitehouse.gov/sites/default/files/microsites/ostp/2016_0504_data_discrimination.pdf) range from government initiatives to creating products in developing countries in order to provide access to communities that did not have access to these services (for example, “[promoting financial inclusion](http://blogs.worldbank.org/psd/promoting-financial-inclusion-is-mobile-money-the-magic-bullet)”, “[filling the gaps between financial access and financial inclusion](https://www.devex.com/news/filling-the-gaps-between-financial-access-and-financial-inclusion-88036)”, and “[Big data, small credit](https://www.omidyar.com/sites/default/files/file_archive/insights/Big%20Data,%20Small%20Credit%20Report%202015/BDSC_Digital%20Final_RV.pdf)”). You can read more about [how to use call data to tap into the low-income customer base](https://www.microfinancegateway.org/library/mobile-phone-data-key-promoting-financial-inclusion) through mobile phones."
+    "A number of initiatives and companies have found ways of using available data sources to build alternative models for assessing credit worthiness that are not based on credit bureau data. These [initiatives](https://obamawhitehouse.archives.gov/sites/default/files/microsites/ostp/2016_0504_data_discrimination.pdf) range from government initiatives to creating products in developing countries in order to provide access to communities that did not have access to these services (for example, “[promoting financial inclusion](http://blogs.worldbank.org/psd/promoting-financial-inclusion-is-mobile-money-the-magic-bullet)”, “[filling the gaps between financial access and financial inclusion](https://www.devex.com/news/filling-the-gaps-between-financial-access-and-financial-inclusion-88036)”, and “[Big data, small credit](https://www.omidyar.com/sites/default/files/file_archive/insights/Big%20Data,%20Small%20Credit%20Report%202015/BDSC_Digital%20Final_RV.pdf)”). You can read more about [how to use call data to tap into the low-income customer base](https://www.microfinancegateway.org/library/mobile-phone-data-key-promoting-financial-inclusion) through mobile phones."
    ]
   },
   {
