--- a/module_8/M8_NB1_Blueprint.ipynb
+++ b/module_8/M8_NB1_Blueprint.ipynb
@@ -214,7 +214,7 @@
     "Many of the concepts that you are required to perform in order to execute a project (from beginning to end) do not form part of the core focus of this course.\n",
     "\n",
     "Based on your experience, and with reference to the project you outlined in Exercise 1, complete the following:\n",
-    "1. Provide a brief overview of the people, processes, and technological aspects that you will need to address in order to exploit the value contained in the data set you identified. You may also consult [Sivarajah et al. (2017)](http://dx.doi.org/10.1016/j.jbusres.2016.08.001) as well as Bernard Marr blog post [\"Where Big Data Projects Fail\"](http://www.datasciencecentral.com/profiles/blogs/where-big-data-projects-fail) for further information.\n",
+    "1. Provide a brief overview of the people, processes, and technological aspects that you will need to address in order to exploit the value contained in the data set you identified. You may also consult [Sivarajah et al. (2017)](https://www.researchgate.net/publication/306051907_Critical_analysis_of_Big_Data_challenges_and_analytical_methods) as well as Bernard Marr blog post [\"Where Big Data Projects Fail\"](http://www.datasciencecentral.com/profiles/blogs/where-big-data-projects-fail) for further information.\n",
     "2. Refer to the project checklist in M6_NB1, which lists the typical activities that make up the phases in a project plan. Phase 1 is covered to a large extent by Exercise 1. Provide a short description of the Phase 0 activities that you would have to address to motivate for, and initiate, the project in your environment (academic or commercial). Include one or two sentences on how you would plan for the project to be terminated.\n"
    ]
   },
@@ -259,7 +259,7 @@
    },
    "source": [
     "# References\n",
-    "1. Uthayasankar Sivarajah, Muhammad Mustafa Kamal, Zahir Irani, Vishanth Weerakkody. 2017. \"Critical analysis of Big Data challenges and analytical methods.\" Journal of Business Research: 70:263-286.  http://dx.doi.org/10.1016/j.jbusres.2016.08.001. (Open Access)\n",
+    "1. Uthayasankar Sivarajah, Muhammad Mustafa Kamal, Zahir Irani, Vishanth Weerakkody. 2017. \"Critical analysis of Big Data challenges and analytical methods.\" Journal of Business Research: 70:263-286.  https://www.researchgate.net/publication/306051907_Critical_analysis_of_Big_Data_challenges_and_analytical_methods. (Open Access)\n",
     "2. Marr, Bernard. \"Where big data projects fail.\" http://www.datasciencecentral.com/profiles/blogs/where-big-data-projects-fail. Last accessed: 25 January 2017."
    ]
   },
