--- a/module_0/M0_NB1_GettingStarted.ipynb
+++ b/module_0/M0_NB1_GettingStarted.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div align=\"right\">Python 2.7 Jupyter Notebook</div>"
+    "<div align=\"right\">Python 3.6 Jupyter Notebook</div>"
    ]
   },
   {
@@ -19,7 +19,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **This notebook is not graded.** It serves as an introduction to the notebooks that you will use throughout the rest of the course."
+    "<div class=\"alert alert-warning\">\n",
+    "<b>Note: This notebook is not graded.</b><br>\n",
+    "It serves as an introduction to the notebooks and submission process that you will use throughout the course.\n",
+    "</div>"
    ]
   },
   {
@@ -33,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook will introduce the concept of interactive notebooks to those who are unfamiliar with it. As part of the resources provisioned to all students, a dedicated Amazon Web Services (AWS) server is created for each student. Your virtual analysis environment runs Ubuntu Linux and contains Anaconda with Python 2.7, as well as a number of additional installed packages that are relevant to the course, but not present in the default set of packages from Anaconda. All the necessary data, as well as the template notebooks required in this course, will be populated on this server."
+    "This notebook will introduce the concept of interactive notebooks to those who are unfamiliar with it. As part of the resources provisioned to all students, a dedicated Amazon Web Services (AWS) server is created for each student. Your virtual analysis environment is created using the [Base Jupyter Notebook Stack](https://github.com/jupyter/docker-stacks/tree/master/base-notebook) for Anaconda with Python 3, as well as a number of additional installed packages that are relevant to the course, but not present in the default set of packages from Anaconda. All the necessary data, as well as the template notebooks required in this course, will be populated on this server."
    ]
   },
   {
@@ -47,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Jupyter Notebooks](http://jupyter-notebook.readthedocs.io/en/latest/notebook.html) are essentially documents that are designed to be easily read by both humans and computers. The elements of a typical notebook include descriptions and analyses, as well as executable code. You can share your code with others and communicate your process and results with a wide array of audiences, from technical to non-technical. Jupyter Notebooks provide a web-based application that is suited to capture the whole computation process: developing, documenting, and executing code, as well as communicating the results.\n",
+    "[Jupyter Notebooks](http://jupyter-notebook.readthedocs.io/en/latest/notebook.html) are essentially documents that are designed to be easily read by both humans and computers. The elements of a typical notebook include descriptions and analyses, as well as executable code. You can share your code with others and communicate your process and results with a wide array of audiences, from technical to non-technical. This type of interactive computing allows for reporting as well as user interaction and is therefore ideally suited for educational purposes. Jupyter Notebooks provide a web-based application that is suited to capture the whole computation process: developing, documenting, and executing code, as well as communicating the results. \n",
     "\n",
     "> **Note**\n",
     "\n",
@@ -57,7 +60,11 @@
     "\n",
     "> **Note**:\n",
     "\n",
-    "> During this course, you will only use the Jupyter Notebooks contained in the Anaconda installation. Notebooks differ from Integrated Development Environments (IDEs) in the sense that they are typically used to interactively analyze and visualize datasets. IDEs are used to create standalone scripts. Should your focus be on pure scripts, which run as standalone items, you can refer to the links below for Python IDEs.\n",
+    "> During this course, you will only use Python 3 based Jupyter Notebooks. \n",
+    "\n",
+    "> A ‘kernel’ is a program that runs and introspects the user’s code. The Anaconda distribution used in this course includes a kernel for Python 3 code. Kernels for Python 2.7, as well as for [several other programming languages](https://github.com/jupyter/jupyter/wiki/Jupyter-kernels) such as R, Julia, Octave are available, but needs to be installed separately on your server. Managing multiple environments is outside the scope of this course.\n",
+    "\n",
+    "> Notebooks differ from Integrated Development Envtironments (IDEs) in the sense that they are typically used to interactively analyze and visualize datasets. IDEs are used to create standalone scripts. Should your focus be on pure scripts, which run as standalone items, you can refer to the links below for Python IDEs.\n",
     "\n",
     "> - [Python IDE for programmers](http://noeticforce.com/best-python-ide-for-programmers-windows-and-mac)\n",
     "\n",
@@ -120,12 +127,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "print \"hello world\""
+    "print(\"hello world\")"
    ]
   },
   {
@@ -151,9 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "2 + 2"
@@ -183,7 +186,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -194,13 +197,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Print the value of variable c.\n",
-    "print c"
+    "print(c)"
    ]
   },
   {
@@ -215,7 +216,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -225,12 +226,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "print 'Hello', yourname"
+    "print('Hello', yourname)"
    ]
   },
   {
@@ -254,25 +253,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Create a function that prints ten numbers.\n",
     "def print_10_nums():\n",
     "    for i in range(10):\n",
-    "        print i,"
+    "        print(i),"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Execute your function.\n",
+    "# Add note or reminder that it starts at 0\n",
     "print_10_nums()"
    ]
   },
@@ -287,14 +285,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Set a new variable, d, equal to 10 and print the variable.\n",
     "d = 10\n",
-    "print d"
+    "print(d)"
    ]
   },
   {
@@ -310,9 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check whether Pandas is installed.\n",
@@ -333,9 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "help('pandas')"
@@ -377,7 +369,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -406,7 +398,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -424,7 +416,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -524,9 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "> **Note**: Ensure that you keep a safe copy of all the notebooks that you change."
    ]
@@ -535,23 +525,23 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
